[+] fix for unstable ones: (#1695)
PipelineTest.testDiscardOldBuildsByCount
PipelineTest.testPermalinksBuildDetails
DashboardTest.testChangeOrderOfColumns